Added github, Facebook address.

--- a/books/violent_python/ch03_forensic_investigation.ipynb
+++ b/books/violent_python/ch03_forensic_investigation.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:686fa7102052609e41cb80b6bbae6fde048702c3950f470f674b3a4a002364c3"
+  "signature": "sha256:b73d9abbfcbba7090da041e600c83e951cc6e414519cd1a9a288d2bdaa044120"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -118,7 +118,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ord('c')"
+      "ord('A'), hex(ord('A'))"
      ],
      "language": "python",
      "metadata": {},
@@ -126,13 +126,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 19,
+       "prompt_number": 48,
        "text": [
-        "99"
+        "(65, '0x41')"
        ]
       }
      ],
-     "prompt_number": 19
+     "prompt_number": 48
     },
     {
      "cell_type": "code",
@@ -260,6 +260,19 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "----\n",
+      "#### [64bit \uc6b4\uc601\uccb4\uc81c\ub97c \uc0ac\uc6a9\ud558\ub294 \uacbd\uc6b0 OpenKey \ud568\uc218 \uc8fc\uc758\uc0ac\ud56d](http://stackoverflow.com/questions/9348951/python-winreg-woes)\n",
+      "\n",
+      "- key = OpenKey(HKEY_LOCAL_MACHINE, net,0, (KEY_WOW64_64KEY + KEY_ALL_ACCESS))\n",
+      "- \uc774\ub7f0 \ud615\ud0dc\ub85c \uc778\uc790 2\uac1c\uac00 \ucd94\uac00\ub418\uc5b4\uc57c \uc815\uc0c1\uc801\uc73c\ub85c \ub3d9\uc791\ud569\ub2c8\ub2e4.\n",
+      "\n",
+      "----"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "### MAC \uc8fc\uc18c\ub85c AP\uc758 \ubb3c\ub9ac\uc801 \uc704\uce58 \ud30c\uc545\ud558\uae30\n",
       "\n",
       "- \ubb34\uc120AP\uc758 MAC \uc8fc\uc18c\ub97c \uac00\uc9c0\uace0 AP\uc758 \ubb3c\ub9ac\uc801 \uc704\uce58\ub97c \ucd9c\ub825 \uac00\ub2a5\n",
@@ -368,6 +381,7 @@
       "import urllib\n",
       "import re\n",
       "from _winreg import *\n",
+      "\n",
       "import sys\n",
       "reload(sys)\n",
       "sys.setdefaultencoding = 'utf-8'\n",
@@ -466,7 +480,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "- \uac00\uc0c1\ub79c\uc774\ub77c \ucc3e\uc744 \uc218 \uc5c6\ub294\ub4ef\n",
+      "- \uac00\uc0c1\ub79c\uce74\ub4dc \ub9e5\uc8fc\uc18c\ub77c \ucc3e\uc744 \uc218 \uc5c6\ub294\ub4ef\n",
+      "- \ub610\ud55c \ub9ce\uc740 \ubd84\ub4e4\uc774 \uc2e4\uc81c \ub9e5\uc8fc\uc18c\uac00 \uc788\ub294\ub370 N/A \ub77c\uace0 \ub72c\ub2e4\uace0 \ud558\uc2dc\ub294\ub370. \ub2f9\uc5f0\ud55c \uacb0\uacfc\uc785\ub2c8\ub2e4.\n",
+      "- wigle.net DB\uc5d0 \uc800\uc7a5\ub418\uc5b4 \uc788\ub294 \ub370\uc774\ud130\ub97c \uac00\uc9c0\uace0 \uacb0\uacfc\ub97c \ucd9c\ub825\ud574\uc8fc\uae30 \ub54c\ubb38\uc5d0 \uc5c6\ub294 MAC \uc8fc\uc18c\ub294 N/A\ub77c\uace0 \ub728\ub294\uac8c \uc815\uc0c1\uc785\ub2c8\ub2e4.\n",
       "\n",
       "\n",
       "    [*] Networks You have Joined.\n",
@@ -752,6 +768,71 @@
       "- \ud2b9\uc815 \ud30c\uc77c\uc744 \uc2dd\ubcc4\ud560 \uc218 \uc788\ub3c4\ub85d \uc635\uc158 \ucc98\ub9ac\ub97c \ucd94\uac00\ud568\uc73c\ub85c\uc368 PDF \ubb38\uc11c\uc5d0 \uc788\ub294 \uba54\ud0c0\ub370\uc774\ud130\ub97c \uc2dd\ubcc4\ud560 \uc218 \uc788\ub294 \ud234\uc774 \uc644\uc131\n",
       "- \ud2b9\uc815 \uba54\ud0c0\ub370\uc774\ud130\ub97c \ud14c\uc2a4\ud2b8\ud560 \uc218 \uc788\ub3c4\ub85d \uc2a4\ud06c\ub9bd\ud2b8\ub97c \uc218\uc815\ud560 \uc218\ub3c4 \uc788\ub2e4.\n",
       "- \ubb3c\ub860 \uc2a4\ud06c\ub9bd\ud2b8\ub97c \uc218\uc815\ud558\uba74 \ub204\uac00 \ubb38\uc11c\ub97c \uc791\uc131\ud588\ub294\uc9c0 \ucd9c\ub825\ud558\ub3c4\ub85d \ud558\uc5ec \ubc94\uc778\uc744 \uccb4\ud3ec\ud558\ub294\ub370 \ub3c4\uc6c0\uc774 \ub420 \uc218\ub3c4 \uc788\uc744 \uac83"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "----\n",
+      "\n",
+      "#### pyPdf\ub97c \uc774\uc6a9\ud574\uc11c PDF \uba54\ud0c0\ub370\uc774\ud130\ub97c \ubd84\uc11d\ud558\ub294 \uacbd\uc6b0 \uc815\uc0c1\uc801\uc778 PDF \ud30c\uc77c\uc778 \uacbd\uc6b0\uc778\ub370\ub3c4 EOF marker not found \ub77c\ub294 \uc624\ub958\uac00 \ucd9c\ub825\ub418\ub294 \uacbd\uc6b0\n",
+      "\n",
+      "- [Merge non-standard PDFs with pyPdf](http://stackoverflow.com/questions/15177587/merge-non-standard-pdfs-with-pypdf)"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### from:"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "    def read(self, stream):\n",
+      "        # start at the end:\n",
+      "        stream.seek(-1, 2)\n",
+      "        line = ''\n",
+      "        while not line:\n",
+      "            line = self.readNextEndLine(stream)\n",
+      "        if line[:5] != \"%%EOF\":\n",
+      "            raise utils.PdfReadError, \"EOF marker not found\"\n",
+      "\n",
+      "    ... etc"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "#### to:"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "    def read(self, stream):\n",
+      "        # start at the end:\n",
+      "        stream.seek(-1, 2)\n",
+      "        line = ''\n",
+      "        # read stream backwards while watching for end-of-file marker\n",
+      "        while line[:5] != \"%%EOF\":\n",
+      "            line = self.readNextEndLine(stream)\n",
+      "\n",
+      "    ... etc\n",
+      "    \n",
+      "<img src=\"files/images/pypdf_eof.jpg\" />"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "----"
      ]
     },
     {
@@ -2866,6 +2947,15 @@
       "<img src=\"files/images/sqlite_ciper.png\" />\n",
       "\n",
       "- \uc774\ub7f0 \uc554\ud638\ud654 \ud234\uc744 \uaf2d \uc0ac\uc6a9\ud574\uc57c\uaca0\ub2e4."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## [About my IPython in github](https://github.com/re4lfl0w/ipython)\n",
+      "\n",
+      "## [\uc73c\uc73c\ub9ac \ub9ac\ubc84\uc2f1 \ud30c\uc73c\ub9ac\uc36c \uc6f9\ud574\uc73c\ud0b9 \ud398\uc774\uc2a4\ubd81](https://www.facebook.com/groups/1512856868944848/)"
      ]
     }
    ],
