Updated Chapter 4 not yet completed.

--- a/books/violent_python/ch03_forensic_investigation.ipynb
+++ b/books/violent_python/ch03_forensic_investigation.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b73d9abbfcbba7090da041e600c83e951cc6e414519cd1a9a288d2bdaa044120"
+  "signature": "sha256:e7bff2c6979d80ec242888695c83a9f4869338df082f356effd208f548458326"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -25,6 +25,15 @@
       "- **\ubaa8\ubc14\uc77c \uae30\uae30** \uc0ac\uc6a9\ud754\uc801 \uc870\uc0ac\n",
       "\n",
       "#### \ub9c8\uc9c0\ub9c9\uc5d0\ub294 \ud14c\ud06c\ub2c9\uc774\ub77c\ub294 \uac83 \uc790\uccb4\ub97c \uc644\uc804\ud788 \uc78a\uc5b4\ubc84\ub824\uc57c \ud55c\ub2e4. \ub354 \ubc1c\uc804\ud558\uba74 \uac00\ub974\uccd0\uc904 \uc218 \uc788\ub294 \uac83\ub4e4\uc740 \uc904\uc5b4\ub4e4\uac8c \ub41c\ub2e4. \uac00\uc7a5 \ud6cc\ub96d\ud55c \uae38\uc740 \uc544\ubb34\ub3c4 \uac00\uc9c0 \uc54a\uc740 \uae38\uc744 \uac00\ub294 \uac83\uc774\ub2e4.\n",
+      "\n",
+      "## \uc774 \uc7a5\uc5d0\uc11c \ud544\uc694\ud55c \uc900\ube44\ubb3c\n",
+      "\n",
+      "- \uc708\ub3c4\uc6b07(\uac00\uc0c1\uba38\uc2e0\uc774\ub4e0 \ub9ac\uc5bc\uc774\ub4e0)\n",
+      "- \uc708\ub3c4\uc6b0 XP(\uac00\uc0c1 \uc788\uc73c\uba74 \uc880 \ub354 \uc88b\uc74c)\n",
+      "- [Skype](www.skype.com/)\n",
+      "- mechanize, pyPdf, PIL, beautiful soup library\n",
+      "- [Firefox](https://www.mozilla.org/firefox)\n",
+      "- [iTunes](https://www.apple.com/kr/itunes): Mobile \uae30\uae30\uc758 \ubc31\uc5c5\uc744 \ub300\uc0c1\uc73c\ub85c \ud14c\uc2a4\ud2b8\ud558\ub294 \uac83\uc774\uae30 \ub54c\ubb38\uc5d0 iPhone\uc774\ub098 iPad\uac00 \uc788\uc5b4\uc57c \ud569\ub2c8\ub2e4. \uc5c6\ub2e4\uba74 \ucc28\uc120\ucc45\uc73c\ub85c sqlite\ub85c \uc791\uc131\ub41c db\uac00 \uc788\uc5b4\uc57c \ub429\ub2c8\ub2e4.\n",
       "\n",
       "## \uc18c\uac1c: BTK \uc0b4\uc778 \uc0ac\uac74\uc758 \ud575\uc2ec\uc801 \uc5f4\uc1e0\uac00 \ub41c \ud3ec\ub80c\uc2dd \uc218\uc0ac\n",
       "\n",
@@ -1377,8 +1386,9 @@
       "### \uc2a4\uce74\uc774\ud504 Sqlite3 \ub370\uc774\ud130\ubca0\uc774\uc2a4 \uc774\ud574\ud558\uae30\n",
       "\n",
       "- Skype\ub294 \ubc84\uc804 4.0\ubd80\ud130 SQLite\ub97c \ub0b4\ubd80 \ub370\uc774\ud130\ubca0\uc774\uc2a4\ub85c \uc0ac\uc6a9\ud558\uae30 \uc2dc\uc791\n",
-      "- \uc708\ub3c4\uc6b0\uc758 \uacbd\uc6b0 C:\\Documents and Settings\\<User>\\Application Data\\Skype\\\\<Skype-account\\> \ub514\ub809\ud1a0\ub9ac\uc758 main.db \ub77c\ub294 \ud30c\uc77c\uc5d0 \ub370\uc774\ud130\ubca0\uc774\uc2a4 \uc800\uc7a5\n",
-      "- MAC OS X: /Users/\\<User\\>/Library/Application/Support/Skype/\\<Skepeaccount\\>\uc5d0 \uc704\uce58\n",
+      "- \uc708\ub3c4\uc6b0 XP: C:\\Documents and Settings\\< User>\\Application Data\\Skype\\\\<Skype-account\\> \ub514\ub809\ud1a0\ub9ac\uc758 main.db \ub77c\ub294 \ud30c\uc77c\uc5d0 \ub370\uc774\ud130\ubca0\uc774\uc2a4 \uc800\uc7a5\n",
+      "- Windows 7: C:\\Users\\< User>\\AppData\\Roaming\\Skype\\< skye account>\\\n",
+      "- MAC OS X: /Users/\\< User\\>/Library/Application/Support/Skype/\\<Skepeaccount\\>\n",
       "- \uc2a4\uce74\uc774\ud504\ub294 \uc774 \ub370\uc774\ud130\ubca0\uc774\uc2a4\uc5d0 \ubb34\uc5c7\uc744 \uc800\uc7a5\ud558\ub294 \uac83\uc77c\uae4c?\n",
       "- \uc2a4\uce74\uc774\ud504 SQLite \ub370\uc774\ud130\ubca0\uc774\uc2a4\uc758 \uad6c\uc870\ub97c \uc880 \ub354 \uc798 \uc774\ud574\ud558\uae30 \uc704\ud574 sqlite3 \uba85\ub839\uc5b4 \ud234\uc744 \uc0ac\uc6a9\ud558\uc5ec \ub370\uc774\ud130\ubca0\uc774\uc2a4\uc5d0 \uc5f0\uacb0\n",
       "\n",
@@ -1395,7 +1405,11 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "    SELECT tbl_name FROM sqlite_master WHERE type == 'table'"
+      "<font color='red'>SELECT</font> tbl_name <font color='red'>FROM</font> sqlite_master <font color='red'>WHERE</font> type == 'table'\n",
+      "\n",
+      "- FROM: 1\n",
+      "- WHERE: 2\n",
+      "- SELECT: 3"
      ]
     },
     {
@@ -1412,7 +1426,12 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "#### Skype\uac00 \uc5f4\ub824 \uc788\uc744 \ub54c\ub294 Lock \uac78\ub9bc\n",
+      "\n",
       "<img src=\"files/images/skype_db1.png\" />\n",
+      "\n",
+      "#### Skype \uc885\ub8cc\ud558\uace0 \uc815\uc0c1\uc801\uc73c\ub85c Query \uacb0\uacfc \ubc18\ud658\n",
+      "\n",
       "<img src=\"files/images/skype_db2.png\" />"
      ]
     },
@@ -1558,7 +1577,7 @@
       "- \ub370\uc774\ud130\ubca0\uc774\uc2a4\ub294 \uc774 \uc815\ubcf4\ub97c Messages\ub77c\ub294 \ud14c\uc774\ube14\uc5d0 \uc800\uc7a5\n",
       "- \uc6b0\ub9ac\ub294 \uc774 \ud14c\uc774\ube14\uc5d0\uc11c timestamp, dialog_parner, author, body_xml(\uba54\uc2dc\uc9c0 \uc6d0\ubb38) \uceec\ub7fc\uc744 \uc77d\uc5b4\uc62c \uac83\n",
       "- \uc5ec\uae30\uc11c \uc720\uc758\ud560 \uc810\uc740 \ub9cc\uc57d author\uac00 dialog_partner\uc640 \ub2e4\ub974\uba74 \ub370\uc774\ud130\ubca0\uc774\uc2a4\uc758 \uc18c\uc720\uc790\uac00 dialog_parner\uc640\uc758 \uba54\uc2dc\uc9c0\ub97c \uc2dc\uc791\ud55c \uac83\n",
-      "- \uadf8\ub807\uc9c0 \uc54a\uc73c\uba74, \uadf8\ub7ec\ub2c8\uae4c author\uac00 dialog_partner\uc640 \ub3d9\uc77c\ud558\uba74 dialog_partner\uac00 \uba54\uc2dc\uc9c0\ub97c \uc2dc\uc791\ud55c \uac83\uc774\uace0 dialog_partnr\ub97c \ucd9c\ub825\ud560 \uac83"
+      "- \uadf8\ub807\uc9c0 \uc54a\uc73c\uba74, \uadf8\ub7ec\ub2c8\uae4c author\uac00 dialog_partner\uc640 \ub3d9\uc77c\ud558\uba74 dialog_partner\uac00 \uba54\uc2dc\uc9c0\ub97c \uc2dc\uc791\ud55c \uac83\uc774\uace0 dialog_partner\ub97c \ucd9c\ub825\ud560 \uac83"
      ]
     },
     {
@@ -1903,6 +1922,19 @@
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "----\n",
+      "### SQLite3 Library Upgrade \ubc29\ubc95\n",
+      "\n",
+      "- [SQLite Download Page](http://www.sqlite.org/download.html)\n",
+      "- Precompiled Binaries for Windows\uc5d0 \uc788\ub294 \ud30c\uc77c \ub2e4\uc6b4\ub85c\ub4dc(\uac01 OS\ubcc4 \ub9de\uac8c) \ubc1b\uc740 \ud6c4 python \uc124\uce58 \ud3f4\ub354\uc758 dlls \ud3f4\ub354(c:\\Python27\\dlls)\uc5d0 dll \ud30c\uc77c \ub36e\uc5b4\uc4f0\uae30 \ud558\uba74 Upgrade your Python-Sqlite3 Libary \uc624\ub958\uac00 \ud574\uacb0 \ub429\ub2c8\ub2e4.\n",
+      "\n",
+      "----"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -2074,10 +2106,11 @@
       "        url = str(row[0])\n",
       "        date = str(row[1])\n",
       "        if 'google' in url.lower():\n",
-      "            r = re.search(r'q=([^&]*)&', url)\n",
+      "            r = re.search(r'q=([^&]*)&?', url)\n",
       "            if r:\n",
       "                search = r.group(1)\n",
       "                search = search.replace('+', ' ')\n",
+      "                search = search.replace('%20', ' ')\n",
       "                print '[+] ' + date + ' - Searched For: ' + search\n",
       "\n",
       "def printNaver(placesDB):\n",
@@ -2339,6 +2372,7 @@
      "collapsed": false,
      "input": [
       "import codecs\n",
+      "import urllib\n",
       "f = codecs.open('ch03/test_hangul.txt', 'w', encoding='utf-8')\n",
       "s = '''%EC%A7%84%EC%A7%9C %ED%8F%AC%EB%A0%8C%EC%8B%9D %EB%90%A0%EA%B9%8C%3F'''\n",
       "f.write(urllib.unquote(s).decode('utf-8'))\n",
@@ -2348,7 +2382,48 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 35
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "f = open('ch03/test_hangul.txt', 'w')\n",
+      "s = '''%EC%A7%84%EC%A7%9C %ED%8F%AC%EB%A0%8C%EC%8B%9D %EB%90%A0%EA%B9%8C%3F'''\n",
+      "f.write(urllib.unquote(s).decode('utf-8'))\n",
+      "f.close()\n",
+      "!open ch03/test_hangul.txt"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "UnicodeEncodeError",
+       "evalue": "'ascii' codec can't encode characters in position 0-1: ordinal not in range(128)",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mUnicodeEncodeError\u001b[0m                        Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-7-546ce2b0fcc5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'ch03/test_hangul.txt'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'''%EC%A7%84%EC%A7%9C %ED%8F%AC%EB%A0%8C%EC%8B%9D %EB%90%A0%EA%B9%8C%3F'''\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murllib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munquote\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mu'open ch03/test_hangul.txt'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;31mUnicodeEncodeError\u001b[0m: 'ascii' codec can't encode characters in position 0-1: ordinal not in range(128)"
+       ]
+      }
+     ],
+     "prompt_number": 7
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "f = open('ch03/test_hangul.txt', 'w')\n",
+      "s = 'abc'\n",
+      "f.write(urllib.unquote(s).decode('utf-8'))\n",
+      "f.close()\n",
+      "!open ch03/test_hangul.txt"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -2561,7 +2636,11 @@
       "    - MAC OS X: /Users/<USERNAME>/LIbrary/Application Support/MobileSync/Backup/\n",
       "    \n",
       "- \ubc31\uc5c5 \ub514\ub809\ud1a0\ub9ac\ub97c \uc0b4\ud3b4\ubcf4\uba74 1,000\uac1c \uc774\uc0c1\uc758 \uc804\ud600 \ub3c4\uc6c0\uc774 \uc548\ub418\ub294 \uc774\ub984\uc758 \ud30c\uc77c\uc774 \uc788\uc74c\n",
-      "- \uac01 \ud30c\uc77c\uc5d0\ub294 40\uac1c\uc758 \ubb38\uc790\ub85c \ub418\uc5b4 \uc788\ub294 \uace0\uc720 \uc2dd\ubcc4\uc790\uac00 \uc788\uc73c\uba70, \ud574\ub2f9 \ud30c\uc77c\uc5d0 \ub300\ud55c \uc124\uba85\uc740 \uadf8 \uc5b4\ub290 \uac83\ub3c4 \uc5c6\ub2e4."
+      "- \uac01 \ud30c\uc77c\uc5d0\ub294 40\uac1c\uc758 \ubb38\uc790\ub85c \ub418\uc5b4 \uc788\ub294 \uace0\uc720 \uc2dd\ubcc4\uc790\uac00 \uc788\uc73c\uba70, \ud574\ub2f9 \ud30c\uc77c\uc5d0 \ub300\ud55c \uc124\uba85\uc740 \uadf8 \uc5b4\ub290 \uac83\ub3c4 \uc5c6\ub2e4.\n",
+      "\n",
+      "#### Forensic Mobile\n",
+      "\n",
+      "- [Forensic analysis of iPhone backups](http://www.exploit-db.com/wp-content/themes/exploit/docs/19767.pdf)"
      ]
     },
     {
