Update Chapter03, Chapter04. I don't know what is modified.

--- a/books/violent_python/ch04_Network_traffic_analysis.ipynb
+++ b/books/violent_python/ch04_Network_traffic_analysis.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c631d214f3b959fce43414652b97d4de4ddfa84eca7e0d1f773c88bd5a10f388"
+  "signature": "sha256:12404fa3526510f34904117e4364298edbd7079ccbd4241f33c578d424073bde"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -169,7 +169,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 27
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -209,7 +209,27 @@
        ]
       }
      ],
-     "prompt_number": 35
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "pwd"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 6,
+       "text": [
+        "u'/Users/re4lfl0w/Documents/ipython/books/violent_python'"
+       ]
+      }
+     ],
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -247,7 +267,7 @@
        ]
       }
      ],
-     "prompt_number": 37
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -349,7 +369,7 @@
        ]
       }
      ],
-     "prompt_number": 163
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -386,7 +406,7 @@
        ]
       }
      ],
-     "prompt_number": 50
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -395,6 +415,29 @@
       "----\n",
       "### inet_ntoa, inet_aton \uc0bd\uc9c8\uae30"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import socket\n",
+      "s = '188.39.7.79'\n",
+      "dst = socket.inet_aton(s)\n",
+      "dst"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 11,
+       "text": [
+        "\"\\xbc'\\x07O\""
+       ]
+      }
+     ],
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -413,7 +456,29 @@
        ]
       }
      ],
-     "prompt_number": 66
+     "prompt_number": 12
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print "
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "NameError",
+       "evalue": "name 'raw' is not defined",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-13-0023d3df0dba>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mraw\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdst\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;31mNameError\u001b[0m: name 'raw' is not defined"
+       ]
+      }
+     ],
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
