Update Program Data Collection.

--- a/articles/conference/pycon2014/pycon2014_in_korea_epilogue.ipynb
+++ b/articles/conference/pycon2014/pycon2014_in_korea_epilogue.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:5882243142b33106efd1150abaab11f2912b4a018ec6e031fb50a94d5099e1d7"
+  "signature": "sha256:e1d7ba2ff4189cfa5a26ef692da63ef520cf597216b4ba06ec9e198cb347e4d6"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -108,6 +108,11 @@
       "  - \uc11c\ubc84\uc5d0\uc11c \ucee4\ubc0b\uc744 \ud558\ub294\uc9c0? local\uc5d0 \ub2e4\uc6b4\ubc1b\uc740 \ub2e4\uc74c\uc5d0 \ucee4\ubc0b\uc744 \ud558\ub294\uc9c0?\n",
       "  - Docker meet up\ub3c4 \uc788\ub2e4!\n",
       "\n",
+      "#### Program \uc790\ub8cc \ubaa8\uc74c\n",
+      "\n",
+      "- [Pycon 2014 \ubc1c\ud45c\uc790\ub8cc \ubaa8\uc74c - Nave D2](https://www.facebook.com/naverd2/posts/545903455538352)\n",
+      "- [Pycon Korea 2014 Schedule](http://www.pycon.kr/2014/programs/schedule/)\n",
+      "\n",
       "#### Program\ub4e4\uc758 \uacf5\ud1b5\uc810 \ubc0f \ubc29\ud5a5\uc131\n",
       "\n",
       "- \ud06c\uac8c 3\uac00\uc9c0\ub85c \ub098\ub268\n",
@@ -120,6 +125,7 @@
       "    - Social Analysis\n",
       "    - \uc790\uc5f0\uc5b4 \ucc98\ub9ac\n",
       "    - \uc2a4\ud06c\ub7a9\n",
+      "    - \uae08\uc735\n",
       "2. \ud30c\uc774\uc36c Advance\n",
       "    - Python 3.4: AsyncIO\n",
       "    - Python3\ub85c \uac1c\ubc1c\ud558\uae30\n",
