Modify image width 400

--- a/articles/conference/pycon2014/pycon2014_in_korea_epilogue.ipynb
+++ b/articles/conference/pycon2014/pycon2014_in_korea_epilogue.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e1d7ba2ff4189cfa5a26ef692da63ef520cf597216b4ba06ec9e198cb347e4d6"
+  "signature": "sha256:98f0a44ac264ba17b17d40f57f693ad396e1fc74a3e431843a4838bba9f2ff7b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -65,7 +65,7 @@
       "<img src=\"files/images/printer1.png\" width=200 />\n",
       "<img src=\"files/images/printer2.png\" width=200 />\n",
       "<img src=\"files/images/printer3.png\" width=200 />\n",
-      "<img src=\"files/images/printer4.png\" />\n",
+      "<img src=\"files/images/printer4.png\" width=400 />\n",
       "\n",
       "- \uad49\uc7a5\ud788 \uc2e0\uc120\ud588\uace0 \uc0ac\ub78c\ub4e4\uc774 \uc77c\uc77c\uc774 \uc774\ub984\uc744 \ub9d0\ud558\uc9c0 \uc54a\uc544\ub3c4 \ub418\ub294 \uc2dc\uc2a4\ud15c\uc774\uc5c8\uc74c. \uc5ec\uae30\uc5d0\uc11c \uc77c\ub2e8 \uae5c\ub180. \uc798 \ub9cc\ub4e4\uc5c8\ub2e4! \uc774\uac83\ub3c4 \ud6c4\uae30\ub85c **\uc5b4\ub5bb\uac8c \ud588\ub294\uc9c0 \uc54c\ub824\uc8fc\uc2e4 \uc218 \uc788\ub294\uc9c0??** \uad81\uae08\ud569\ub2c8\ub2e4.\n",
       "- \uba85\ucc30\uc774 \ub098\uc624\uae34 \uc798 \ub098\uc654\ub294\ub370 **\uc811\ub294 \ubd80\ubd84\ub300\ub85c \uc811\uc73c\uba74 \uc798 \uc548\ub4e4\uc5b4\uac00\ub294 \uc0ac\ud0dc** \ubc1c\uc0dd..\n",
@@ -74,7 +74,7 @@
       "\n",
       "- \uc7a5\ud61c\uc2dd\ub2d8\uc758 \uac1c\ud68c\uc0ac\n",
       "\n",
-      "<img src=\"files/images/opening.png\" />\n",
+      "<img src=\"files/images/opening.png\" width=400 />\n",
       "\n",
       "\n",
       "- \ud504\ub85c\uadf8\ub798\ubc0d \uc5b8\uc5b4 \uc21c\uc704\n",
