--- a/qna/Auto_download_open.ipynb
+++ b/qna/Auto_download_open.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c764a55bd34158e54c3565981894dd96428b280d3cdd81b443a38492ad9b25ca"
+  "signature": "sha256:86149b01ca9e941b5f91df4317155e6ea099b24c96821072d6e65cd344eae6a4"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -17,7 +17,9 @@
       "- [Ebook \uad49\uc7a5\ud788 \ub9ce\ub2e4!](http://ebooks.shahed.biz/)\n",
       "- \uc74c.. \ub0b4\uac00 \ud588\uc744\ub54c\ub294 \uc798 \ub410\ub294\ub370 \uc790\ub3d9\ub2e4\uc6b4\ub85c\ub4dc \ud558\ub294 \uc0ac\ub78c\ub4e4\uc774 \ub9ce\uc544\uc11c \uadf8\ub7f0\uac00 **\ub9c9\uc544\ub1a8\ub124** -\u3141-(2014.07 \uc815\ub3c4)\n",
       "- \uc9c0\uae08\uc740 id/pw \uc785\ub825\ud574\uc57c \ub41c\ub2e4. \uadf8\ub798\uc11c \uc9c0\uae08 \uc774 \uc18c\uc2a4\ub97c \ub3cc\ub9ac\uba74 \ubc14\ub85c \uc885\ub8cc\ub428..\n",
-      "- id/pw \uc790\ub3d9 \uc785\ub825\ud574\uc11c \ub2e4\uc6b4\ub85c\ub4dc \ubc1b\uc744 \uc218 \uc788\uac8c \uc5c5\uadf8\ub808\uc774\ub4dc \ud574\uc57c \ub428. \uadfc\ub370 \uadc0\ucc2e\uc74c. \uadf8\uac74 **\ub3c5\uc790\uc758 \ubaab**\uc73c\ub85c \ub0a8\uae40"
+      "- id/pw \uc790\ub3d9 \uc785\ub825\ud574\uc11c \ub2e4\uc6b4\ub85c\ub4dc \ubc1b\uc744 \uc218 \uc788\uac8c \uc5c5\uadf8\ub808\uc774\ub4dc \ud574\uc57c \ub428. \uadfc\ub370 \uadc0\ucc2e\uc74c. \uadf8\uac74 **\ub3c5\uc790\uc758 \ubaab**\uc73c\ub85c \ub0a8\uae40\n",
+      "\n",
+      "![auto download](files/images/auto_download.png)"
      ]
     },
     {
