Add some information(link, feel)

--- a/books/python_cookbook/ch01.ipynb
+++ b/books/python_cookbook/ch01.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f79b14bb623c6ab8006d9d66536bb247d5261fe368e0b94725d220d1b13ba411"
+  "signature": "sha256:255539376b41eebd668f41ab549710f5ce19646719a257ae0d36de82df7571e8"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -13,6 +13,9 @@
      "metadata": {},
      "source": [
       "# 1. \uc790\ub8cc\uad6c\uc870\uc640 \uc54c\uace0\ub9ac\uc998\n",
+      "\n",
+      "- start: 2014-09-30\n",
+      "- end: 2014-10-02 \n",
       "\n",
       "## Python3\n",
       "\n",
@@ -4470,6 +4473,13 @@
       }
      ],
      "prompt_number": 294
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "- [Pycon Korea 2014 Program | \uc704\ub300\ud55c dict \uc774\ud574\ud558\uace0 \uc0ac\uc6a9\ud558\uae30](http://www.pycon.kr/2014/program/2)"
+     ]
     },
     {
      "cell_type": "code",
