Modify link layout and Add ch02_02 link at the end of page.

--- a/books/python_cookbook/ch02_01.ipynb
+++ b/books/python_cookbook/ch02_01.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:1cd79cd52311966eb48eaaa0bac00e86a9f7ae9f4e7ff5d29554975562ff3480"
+  "signature": "sha256:a1e292387b7a149080239ab4c0629110c5c882cd831ef07bec55e380c822a7f8"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -3693,6 +3693,13 @@
       "\n",
       "- \uc720\ub2c8\ucf54\ub4dc\uc640 \uc815\uaddc \ud45c\ud604\uc2dd\uc744 \ud568\uaed8 \uc0ac\uc6a9\ud558\uae30\ub780 \uc0ac\uc2e4 \uad49\uc7a5\ud788 \uc5b4\ub824\uc6c0\n",
       "- \uc815\ub9d0\ub85c \uc774 \ub458\uc744 \ud568\uaed8 \uc0ac\uc6a9\ud574\uc57c\uaca0\ub2e4\uba74, third-party [regex](https://pypi.python.org/pypi/regex) \ub77c\uc774\ube0c\ub7ec\ub9ac\ub97c \uc124\uce58\ud558\uace0 **\uc720\ub2c8\ucf54\ub4dc \ub300\uc18c\ubb38\uc790 \ubcc0\ud658** \ub4f1\uc744 \uae30\ubcf8\uc73c\ub85c \uc81c\uacf5\ud558\ub294 \ub9ce\uc740 \uae30\ub2a5\uc744 \uc774\uc6a9\ud574\uc57c \ub428"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### [2. \ubb38\uc790\uc5f4\uacfc \ud14d\uc2a4\ud2b8 02](http://nbviewer.ipython.org/github/re4lfl0w/ipython/blob/master/books/python_cookbook/ch02_02.ipynb)"
      ]
     }
    ],
