Modify wrong sentences

--- a/books/python_cookbook/ch02_02.ipynb
+++ b/books/python_cookbook/ch02_02.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b87160ff30a1b75d978b54ed7ce45bd95ea554617dee8940a7412982080bd5cd"
+  "signature": "sha256:d313f791099e9a5306359e5900fcc3e7ba4e2df4c01f0b49e39cdc55a5e3b8b0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1428,7 +1428,15 @@
         "\n",
         "\n",
         "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "is\tawesome\r\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "\n",
@@ -2627,7 +2635,7 @@
       "- maxsize\uc778 32768\ubcf4\ub2e4 \ud06c\ub2e4\uba74 parts \ub9ac\uc2a4\ud2b8\uc5d0 \ub2f4\uaca8\uc838 \uc788\ub358\uac78 \ubb38\uc790\uc5f4\ub85c join \uc2dc\ud0a4\uace0\n",
       "- \ud30c\uc77c \uc800\uc7a5\ud558\uace0\n",
       "- parts\uc640 size\ub294 \ucd08\uae30\ud654\n",
-      "- \uc911\uc694\ud55c\uc810: **\uc0dd\uc131\uc790 \ud568\uc218\uac00 \ubbf8\ub798\uc758 \uad6c\ud604 \ubc29\uc2dd\uc744 \uc54c\uc9c0 \ubabb\ud55c\ub2e4**\ub294 \uc0ac\ub9ac\uc774\uace0, **\uc0dd\uc131\uc790 \ud568\uc218\ub294 \uadf8\uc800 \ubb38\uc790\uc5f4\uc744 \uc81c\uacf5\ud560 \ubfd0**\n",
+      "- \uc911\uc694\ud55c\uc810: **\uc0dd\uc131\uc790 \ud568\uc218\uac00 \ubbf8\ub798\uc758 \uad6c\ud604 \ubc29\uc2dd\uc744 \uc54c\uc9c0 \ubabb\ud55c\ub2e4**\ub294 \uc0ac\uc2e4\uc774\uace0, **\uc0dd\uc131\uc790 \ud568\uc218\ub294 \uadf8\uc800 \ubb38\uc790\uc5f4\uc744 \uc81c\uacf5\ud560 \ubfd0**\n",
       "  - \uc774\ud574 \uc548\ub428.. \ub098\uc911\uc5d0 \ub2e4\uc2dc \ud55c \ubc88 \uc0b4\ud3b4\ubcf4\uc790"
      ]
     },
@@ -2682,7 +2690,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "- \ud639\uc740 \uce58\ud658\ud560 \uac12\uc774 \ubcc0\uc218\uc5d0 \ub4e4\uc5b4 \uc788\ub2e4\uba74 format_map()\uacfc vars()\ub97c \u314e\ub9c8\uaed8 \uc0ac\uc6a9"
+      "- \ud639\uc740 \uce58\ud658\ud560 \uac12\uc774 \ubcc0\uc218\uc5d0 \ub4e4\uc5b4 \uc788\ub2e4\uba74 format_map()\uacfc vars()\ub97c \ud568\uaed8 \uc0ac\uc6a9"
      ]
     },
     {
