--- a/books/python_cookbook/ch02_01.ipynb
+++ b/books/python_cookbook/ch02_01.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a1e292387b7a149080239ab4c0629110c5c882cd831ef07bec55e380c822a7f8"
+  "signature": "sha256:c00707b27947c033a8394e8c04f869c42d53c45b5861503ec2913a477f49604f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -18,7 +18,7 @@
       "- end: 2014-10-03\n",
       "\n",
       "\n",
-      "- \uac70\uc758 \ubaa8\ub4e0 \uc4f8\ub9cc\ud55c \ud504\ub85c\uadf8\ub7a8\uc5d0\ub294 \uc5b4\ub5bb\uac8c\ub4e0 \ub370\uc774\ud130 \ud30c\uc2f1\uc774\ub098 \uacb0\uacfc\ubb3c \ucd9c\ub824\uacfc \uac19\uc740 \ud14d\uc2a4\ud2b8 \ud504\ub85c\uc138\uc2f1\uc774 \ub4e4\uc5b4\uc788\uc74c\n",
+      "- \uac70\uc758 \ubaa8\ub4e0 \uc4f8\ub9cc\ud55c \ud504\ub85c\uadf8\ub7a8\uc5d0\ub294 \uc5b4\ub5bb\uac8c\ub4e0 \ub370\uc774\ud130 \ud30c\uc2f1\uc774\ub098 \uacb0\uacfc\ubb3c \ucd9c\ub825\uacfc \uac19\uc740 \ud14d\uc2a4\ud2b8 \ud504\ub85c\uc138\uc2f1\uc774 \ub4e4\uc5b4\uc788\uc74c\n",
       "- \ubb38\uc790\uc5f4 \ub098\ub204\uae30, \uac80\uc0c9, \ube7c\uae30, \ub809\uc2f1, \ud30c\uc2f1\uacfc \uac19\uc774 \ud14d\uc2a4\ud2b8 \ucc98\ub9ac\uc640 \uad00\ub828\uc788\ub294 \uc77c\ubc18\uc801\uc778 \ubb38\uc81c\uc5d0 \ucd08\uc810\n",
       "- \ub300\ubd80\ubd84\uc758 \ubb38\uc81c\ub294 \ud30c\uc774\uc36c\uc5d0 \ub0b4\uc7a5\ub418\uc5b4 \uc788\ub294 \ubb38\uc790\uc5f4 \uba54\uc18c\ub4dc\ub85c \ud574\uacb0 \uac00\ub2a5\n",
       "- \uc870\uae08 \ubcf5\uc7a1\ud55c \ubb38\uc81c\ub294 **\uc815\uaddc \ud45c\ud604\uc2dd**\uc744 \uc0ac\uc6a9\ud558\uac70\ub098 \ubb38\uc790\uc5f4 \ud30c\uc11c\ub97c \uc791\uc131\ud574\uc57c \ub428\n",
@@ -90,7 +90,7 @@
      "source": [
       "### \ud1a0\ub860\n",
       "\n",
-      "- re.split() \ud568\uc218\ub294 \ubd80\u315c\ub9ac \uad6c\ubb38\ub9c8\ub2e4 \uc5ec\ub7ec \ud328\ud134\uc744 \uba85\uc2dc\ud560 \uc218 \uc788\ub2e4\ub294 \uc7a5\uc810 \uc874\uc7ac\n",
+      "- re.split() \ud568\uc218\ub294 \ubd84\ub9ac \uad6c\ubb38\ub9c8\ub2e4 \uc5ec\ub7ec \ud328\ud134\uc744 \uba85\uc2dc\ud560 \uc218 \uc788\ub2e4\ub294 \uc7a5\uc810 \uc874\uc7ac\n",
       "- \uc55e\uc758 \ucf54\ub4dc\uc5d0\uc11c \ubcf8 \ub300\ub85c \uc27c\ud45c(,), \uc138\ubbf8\ucf5c\ub860(;), \uacf5\ubc31\ubb38\uc790\uc640 \ub4a4\uc774\uc5b4 \ub098\uc624\ub294 \ud558\ub098 \uc774\uc0c1\uc758 \uacf5\ubc31\ubb38\uc790 \ubaa8\ub450\ub97c \ubd84\ub9ac \uad6c\ubb38\uc73c\ub85c \uc0ac\uc6a9\n",
       "- \uc774 \ud328\ud134\uc774 \ub098\uc62c \ub54c\ub9c8\ub2e4 \ub9e4\uce6d\ub41c \ubd80\ubd84\uc740 \ubaa8\ub450\uac00 \uad6c\ubd84\uc790\uac00 \ub428\n",
       "- \uacb0\uacfc\ub294 str.split()\uacfc \ub9c8\ucc2c\uac00\uc9c0\ub85c \ud544\ub4dc \ub9ac\uc2a4\ud2b8\uac00 \ub428\n",
@@ -750,7 +750,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## 2.3 \uc258 \uc640\uc77c\ub4dc\uce74\ub4dc \ud328\ud134\uc73c\ub85c \ubb38\uc790\uc5f4 \ub9fb\uc774\n",
+      "## 2.3 \uc258 \uc640\uc77c\ub4dc\uce74\ub4dc \ud328\ud134\uc73c\ub85c \ubb38\uc790\uc5f4 \ub9e4\uce6d\n",
       "\n",
       "### \ubb38\uc81c\n",
       "\n",
@@ -1602,7 +1602,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "- findall() \uba54\uc18c\ub4dc\ub294 \ud14d\uc2a4\ud2b8\ub97c \uac80\uc0c9\ud558\uace0 \ubaa8\ub4e0 \ub9fb\uc774\uc744 \ucc3e\uc544 \ub9ac\uc2a4\ud2b8\ub85c \ubc18\ud658\n",
+      "- findall() \uba54\uc18c\ub4dc\ub294 \ud14d\uc2a4\ud2b8\ub97c \uac80\uc0c9\ud558\uace0 \ubaa8\ub4e0 \ub9e4\uce6d\uc744 \ucc3e\uc544 \ub9ac\uc2a4\ud2b8\ub85c \ubc18\ud658\n",
       "- \ud55c \ubc88\uc5d0 \uacb0\uacfc\ub97c \uc5bb\uc9c0 \uc54a\uace0 \ud14d\uc2a4\ud2b8\ub97c \uc21c\ud68c\ud558\uba70 \ucc3e\uc73c\ub824\uba74 finditer() \uc0ac\uc6a9"
      ]
     },
@@ -1859,7 +1859,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "- \\3\uacfd \uac19\uc740 \ud45c\ud604\uc740 \ud328\ud134\uc758 \ucea1\uccd0 \uadf8\ub8f9\uc744 \ucc38\uc870\n",
+      "- \\3\uacfc \uac19\uc740 \ud45c\ud604\uc740 \ud328\ud134\uc758 \ucea1\uccd0 \uadf8\ub8f9\uc744 \ucc38\uc870\n",
       "- \ub3d9\uc77c\ud55c \ud328\ud134\uc744 \uc0ac\uc6a9\ud55c \uce58\ud658\uc744 \uacc4\uc18d\ud574\uc57c \ud55c\ub2e4\uba74 \ucef4\ud30c\uc77c\ub9c1"
      ]
     },
@@ -2129,7 +2129,7 @@
       "- 2\ubc88\uc9f8 python\n",
       "- 3\ubc88\uc9f8 Python\n",
       "- \uc774\ub807\uac8c \ub118\uc5b4\uac00\uc11c \uac01\uac01 if, else\ubb38\uc5d0\uc11c \ud310\ub2e8\n",
-      "- \ubb38\uc81c\ub294 matchcase\uc5d0 word\ub97c \ub118\uac74\uac74 \uc774\ud574\ud558\uaca0\ub2e8 \ub9d0\uc57c, \uadf8\ub7f0\ub370 \uc5b4\ub5bb\uac8c replace\uc5d0 m\uc744 \ub118\uae30\ub0d4 \ub9d0\uc774\uc9c0? \uc774 m\uc740 \uc5b4\ub514\uc11c \uc654\ub294\uac00?? \ucd1d 3\ubc88 \ub9e4\uce58 \ub418\ub2c8\uae4c 3\ubc88 matchcase\ub97c \ud638\ucd9c\ud558\uace0 \ud638\ucd9c\ud574\uc11c \ubcf4\ub0bc \ub54c \ubcf4\ub0b4\ub294 \uc778\uc790\uac00 m\uc774\ub77c\ub294 \ub9d0\uc778\uac00? \uadf8\ub798\uc57c \ub9d0\uc774 \ub418\ub294\ub370\n",
+      "- \ubb38\uc81c\ub294 matchcase\uc5d0 word\ub97c \ub118\uae30\ub294\uac74 \uc774\ud574\ud558\uaca0\ub2e8 \ub9d0\uc57c, \uadf8\ub7f0\ub370 \uc5b4\ub5bb\uac8c replace\uc5d0 m\uc744 \ub118\uae30\ub0d4 \ub9d0\uc774\uc9c0? \uc774 m\uc740 \uc5b4\ub514\uc11c \uc654\ub294\uac00?? \ucd1d 3\ubc88 \ub9e4\uce58 \ub418\ub2c8\uae4c 3\ubc88 matchcase\ub97c \ud638\ucd9c\ud558\uace0 \ud638\ucd9c\ud574\uc11c \ubcf4\ub0bc \ub54c \ubcf4\ub0b4\ub294 \uc778\uc790\uac00 m\uc774\ub77c\ub294 \ub9d0\uc778\uac00? \uadf8\ub798\uc57c \ub9d0\uc774 \ub418\ub294\ub370\n",
       "- matchcase\uac00 re.sub\uc5d0 \ub4e4\uc5b4\uc624\uc790\ub9c8\uc790 \uc2e4\ud589\uc774 \ub418\uace0 replace\uc5d0 m\uc744 \ub118\uaca8\uc900\ub2e4.\n",
       "- \uc65c\ub0d0\ud558\uba74 matchcase('snake')\uc5d0\ub294 \ud56d\uc0c1 \ubcc0\uacbd\ub41c string \uc774 \ub4e4\uc5b4\uc624\ub2c8\uae4c\n",
       "- word: snake\n",
@@ -2146,7 +2146,7 @@
      "collapsed": false,
      "input": [
       "# \uc774\ub807\uac8c \ud558\ub2c8\uae4c \ubc14\ub85c error \ucd9c\ub825\ud558\ub124\n",
-      "def matchcase(word):\n",
+      "def matchcase2(word):\n",
       "    text = word.group()\n",
       "    if text.isupper():\n",
       "        return word.upper()\n",
@@ -2473,7 +2473,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# \uc65c i\uac00 \uc0ac\ub0d0\uba74..0\ubd80\ud130 4\uae4c\uc9c0 \ubcc0\uacbd\ub410\uace0\n",
+      "# \uc65c i\uac00 4\ub0d0\uba74..0\ubd80\ud130 4\uae4c\uc9c0 \ubcc0\uacbd\ub410\uace0\n",
       "# i\uac00 \uc65c 0\uc77c\ub54c\ub294 \uc548 \ub2f4\uae30\uc9c0?\n",
       "acts[4](2)"
      ],
@@ -2503,6 +2503,7 @@
       "\n",
       "acts = makeActions()\n",
       "# \uc5ec\uae30\ub294 i\uac00 9\ub2c8\uae4c\n",
+      "# i\uac00 \uacc4\uc18d \uc99d\uac00\ud574\uc11c 9\uac00 \ub428\n",
       "print(acts[0](2))\n",
       "print(acts[4](2))"
      ],
@@ -2526,7 +2527,7 @@
      "source": [
       "### \ud1a0\ub860\n",
       "\n",
-      "- \ub300\uac31\uc758 \uacbd\uc6b0 re.IGNORECASE\ub97c \uc0ac\uc6a9\ud558\ub294 \uac83\ub9cc\uc73c\ub85c \ub300\uc18c\ubb38\uc790\ub97c \ubb34\uc2dc\ud55c \ud14d\uc2a4\ud2b8 \uc791\uc5c5\uc5d0 \ubb34\ub9ac\uac00 \uc5c6\uc74c\n",
+      "- \ub300\uac1c\uc758 \uacbd\uc6b0 re.IGNORECASE\ub97c \uc0ac\uc6a9\ud558\ub294 \uac83\ub9cc\uc73c\ub85c \ub300\uc18c\ubb38\uc790\ub97c \ubb34\uc2dc\ud55c \ud14d\uc2a4\ud2b8 \uc791\uc5c5\uc5d0 \ubb34\ub9ac\uac00 \uc5c6\uc74c\n",
       "- \ud558\uc9c0\ub9cc Unicode\uac00 \ud3ec\ud568\ub41c \uc791\uc5c5\uc744 \ud558\uae30\uc5d0\ub294 \ubd80\uc871\ud560 \uc218 \uc788\uc74c"
      ]
     },
@@ -2538,7 +2539,7 @@
       "\n",
       "### \ubb38\uc81c\n",
       "\n",
-      "- \uc815\uaddc \ud45c\ud604\uc2dd\uc744 \uc0ac\uc6a9\ud55c \ud14d\uc2a4\ud2b8 \ub9fb\uc774\uc744 \ud558\uace0 \uc2f6\uc9c0\ub9cc \ud14d\uc2a4\ud2b8\uc5d0\uc11c \uac00\uc7a5 \uae34 \ubd80\ubd84\uc744 \ucc3e\uc544\ub0b8\ub2e4. \ub9cc\uc57d \uac00\uc7a5 \uc9e7\uc740 \ubd80\ubd84\uc744 \ucc3e\uc544\ub0b4\uace0 \uc2f6\ub2e4\uba74 \uc5b4\ub5bb\uac8c \ud574\uc57c \ud560\uae4c?\n",
+      "- \uc815\uaddc \ud45c\ud604\uc2dd\uc744 \uc0ac\uc6a9\ud55c \ud14d\uc2a4\ud2b8 \ub9e4\uce6d\uc744 \ud558\uace0 \uc2f6\uc9c0\ub9cc \ud14d\uc2a4\ud2b8\uc5d0\uc11c \uac00\uc7a5 \uae34 \ubd80\ubd84\uc744 \ucc3e\uc544\ub0b8\ub2e4. \ub9cc\uc57d \uac00\uc7a5 \uc9e7\uc740 \ubd80\ubd84\uc744 \ucc3e\uc544\ub0b4\uace0 \uc2f6\ub2e4\uba74 \uc5b4\ub5bb\uac8c \ud574\uc57c \ud560\uae4c?\n",
       "\n",
       "### \ud574\uacb0\n",
       "\n",
@@ -2690,7 +2691,7 @@
       "- .\uc740 newline\uc744 \uc81c\uc678\ud55c \ubaa8\ub4e0 \ubb38\uc790\uc5d0 \ub9e4\uce6d\n",
       "- \ud558\uc9c0\ub9cc \uc810\uc744 \ud14d\uc2a4\ud2b8\uc758 \uc2dc\uc791\uacfc \uc911\uac04 \uc0ac\uc774\uc5d0 \ub123\uc73c\uba74, \ub9e4\uce6d\uc740 \uac00\uc7a5 \uae34 \uac83\uc744 \ucc3e\uc544\ub0b4\ub824\uace0 \ud568\n",
       "- \uacb0\uad6d \ubb38\uc7a5\uc758 \uc2dc\uc791\uacfc \ub05d\uc774 \ub9e4\uce6d\uc5d0\uc11c \ubb34\uc2dc\ub418\uace0 \ub354 \uae34 \ub9e4\uce6d\uc5d0 \ud558\ub098\ub85c \ud3ec\ud568\ub418\uc5b4 \ubc84\ub9bc\n",
-      "- \uc774\ub584 \\*\ub098 \\+\uc5d0 \\?\ub97c \ubd99\uc774\uba74 \uc815\uaddc\ud45c\ud604\uc2dd\uc758 \ub9fb\uc774 \uc54c\uace0\ub9ac\uc998\uc5d0\uac8c \uac00\uc7a5 \uc9e7\uc740 \uac83\uc744 \ucc3e\uc544\ub0b4\ub3c4\ub85d \uba85\uc2dc\ud560 \uc218 \uc788\uc74c"
+      "- \uc774\ub584 \\*\ub098 \\+\uc5d0 \\?\ub97c \ubd99\uc774\uba74 \uc815\uaddc\ud45c\ud604\uc2dd\uc758 \ub9e4\uce6d \uc54c\uace0\ub9ac\uc998\uc5d0\uac8c \uac00\uc7a5 \uc9e7\uc740 \uac83\uc744 \ucc3e\uc544\ub0b4\ub3c4\ub85d \uba85\uc2dc\ud560 \uc218 \uc788\uc74c"
      ]
     },
     {
@@ -3498,7 +3499,7 @@
       "### \ud574\uacb0\n",
       "\n",
       "- \uae30\ubcf8\uc801\uc778 \uc720\ub2c8\ucf54\ub4dc \ucc98\ub9ac\ub97c \uc704\ud55c \ub300\ubd80\ubd84\uc758 \uae30\ub2a5\uc744 re\ubaa8\ub4c8\uc774 \uc81c\uacf5\n",
-      "- \\d\ub294 \uc720\ub2c8\ucf54\ub4dc \uc22b\uc790\uc5d0 \uc774\ubbf8 \ub9fb\uc774\ud568"
+      "- \\d\ub294 \uc720\ub2c8\ucf54\ub4dc \uc22b\uc790\uc5d0 \uc774\ubbf8 \ub9e4\uce6d\ud568"
      ]
     },
     {
