Modify book image url

--- a/articles/review/coding_dependence_on_technology.ipynb
+++ b/articles/review/coding_dependence_on_technology.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:8b2cd4a8af5d948923544daf4c845721023d34a9a5058a1c7739e700e5838f65"
+  "signature": "sha256:fc005876005ebd8d84b99afeef5ca70b19c01d7953ae66cea4d87ce66023248c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -16,7 +16,7 @@
       "\n",
       "- [\\[\ub3c4\uc11c\\] \ucf54\ub529\uc744 \uc9c0\ud0f1\ud558\ub294 \uae30\uc220, \ub2c8\uc2dc\uc624 \ud788\ub85c\uce74\uc988 \uc800/\uae40\uc644\uc12d \uc5ed, 9788994774480](http://www.yes24.com/24/goods/11101558?scode=032&OzSrank=1)\n",
       "\n",
-      "![\ucf54\ub529\uc744 \uc9c0\ud0f1\ud558\ub294 \uae30\uc220](http://image.yes24.com/goods/11101558/L)\n",
+      "![\ucf54\ub529\uc744 \uc9c0\ud0f1\ud558\ub294 \uae30\uc220](http://image.kyobobook.co.kr/images/book/large/480/l9788994774480.jpg)\n",
       "\n",
       "- start: 2014-10-27\n",
       "- end: 2014-10-29\n",
@@ -28,7 +28,9 @@
       "- \ucc45 \ud06c\uae30\ub3c4 \uc791\uace0 \ud55c \ubc88 \uc77d\uc5b4\ubcf8 \ub0b4\uc6a9\uc774\ub77c \ube60\ub978 \uc2dc\uac04\ub0b4\uc5d0 \uc77d\uc744 \uc218 \uc788\uc744\uac70\ub77c \uc0dd\uac01\ud588\uc9c0\ub9cc \uc758\uc678\ub85c \uc9d1\uc911\uc774 \uc5b4\ub824\uc6cc\uc11c \uc9c4\ub3c4\uac00 \ub2a6\uac8c \ub098\uac10(\ubb38 \uc5f4\uace0 \ub2eb\uace0, \ub5a0\ub4dc\ub294 \uc18c\ub9ac, \uad50\uad00 \ub208\uce58 \uc0b4\ud53c\uae30 \ub4f1)\n",
       "- \uac04\ub2e8\ud55c \uac83 \uc704\uc8fc. \ubcf5\uc7a1\ud55c \uac83\uc740 \uc774\ud574\ud558\uae30 \uc704\ud55c \uc2dc\uac04\uc774 \ud544\uc694\ud558\uae30 \ub54c\ubb38\uc5d0 \ubd80\uc801\uc808.\n",
       "- \uac00\uc7a5 \uc911\uc694\ud55c \uac83: \uad70\ubcf5\uc758 \uac74\ube75 \uc8fc\uba38\ub2c8\uc5d0 \ub531 \ub4e4\uc5b4\uac08 \ud06c\uae30(150\\*210\\*20mm)\n",
-      "- \uc774\ubbf8 \ud55c \ubc88 \uc77d\uc5b4\ubd24\ub358 \ucc45\uc744 \uae30\uc900\uc73c\ub85c \ub2e4\uc2dc \ud55c \ubc88 \uc775\uc5b4\uac00\uba74\uc11c \ubcf5\uc2b5\ud558\ub294\uac8c \ucd5c\uc801(\ud6c8\ub828 \ub54c\ubb38\uc5d0 \ub0b4\uc6a9\uc5d0 \uc9d1\uc911\ud560 \uc218\uac00 \uc5c6\ub2e4)"
+      "- \uc774\ubbf8 \ud55c \ubc88 \uc77d\uc5b4\ubd24\ub358 \ucc45\uc744 \uae30\uc900\uc73c\ub85c \ub2e4\uc2dc \ud55c \ubc88 \uc775\uc5b4\uac00\uba74\uc11c \ubcf5\uc2b5\ud558\ub294\uac8c \ucd5c\uc801(\ud6c8\ub828 \ub54c\ubb38\uc5d0 \ub0b4\uc6a9\uc5d0 \uc9d1\uc911\ud560 \uc218\uac00 \uc5c6\ub2e4)\n",
+      "- \ube44\uad50\uc640 \uc5ed\uc0ac\ub97c \uc0ac\uc6a9\ud574\uc11c \uc5b8\uc5b4\uc758 \uacf5\ud1b5\uc810\uacfc \ucc28\uc774\uc810\uc744 \uc54c\ub824\uc8fc\uc5b4 \uc5b4\ub5a4 \ud558\ub098\uc758 \uc5b8\uc5b4\uc5d0 \ud3b8\ud611\ud55c \uc2dc\uac01\uc744 \uac16\ub294 \uac83\uc744 \ubc29\uc9c0\ud574\uc8fc\ub294 \ucc45\n",
+      "- \uc544\ubb34\ub9ac \ud30c\uc774\uc36c\uc774 \uc88b\uc544\ub3c4 \ud30c\uc774\uc36c\uc740 \ub2e8\uc9c0 \ub3c4\uad6c\uc77c\ubfd0 \uc8fc\uc778\uc740 \ub098"
      ]
     },
     {
