--- a/articles/conference/pycon2014/pycon2014_in_korea_epilogue.ipynb
+++ b/articles/conference/pycon2014/pycon2014_in_korea_epilogue.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:98f0a44ac264ba17b17d40f57f693ad396e1fc74a3e431843a4838bba9f2ff7b"
+  "signature": "sha256:a0ac77a21669881156b358a82b7d173900eae1b7ea349cc03db98fc66f10b22e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -89,6 +89,11 @@
       "- \ub09c Data \ubd84\uc11d\ucabd \uc704\uc8fc\ub85c \uc9f0\uc74c\n",
       "- \uac1c\uc778\uc801 \ucde8\ud5a5\uc774\ub2c8 \uc624\ud574\uc5c6\uae30\ub97c \ubc14\ub78c\n",
       "\n",
+      "#### Program \uc790\ub8cc \ubaa8\uc74c\n",
+      "\n",
+      "- [Pycon 2014 \ubc1c\ud45c\uc790\ub8cc \ubaa8\uc74c - Nave D2](https://www.facebook.com/naverd2/posts/545903455538352)\n",
+      "- [Pycon Korea 2014 Schedule](http://www.pycon.kr/2014/programs/schedule/): \ubc1c\ud45c \uc790\ub8cc \uac19\uc740 \uacbd\uc6b0\ub3c4 \uc774\uc804\ucc98\ub7fc \uc774\uba54\uc77c\ub85c \ubc1b\ub294\uac8c \uc544\ub2c8\ub77c \uac01\uc790 pycon2014 \uc0ac\uc774\ud2b8\uc5d0 \ub85c\uadf8\uc778 \ud55c \ud6c4 \uc62c\ub9ac\uba74 \ub418\ub294 \uc2dd\uc774\ub77c \uad49\uc7a5\ud788 \uc2e0\uc120\ud588\uc74c\n",
+      "\n",
       "#### Programs \ud6c4\uae30\n",
       "\n",
       "- \uc774\ubbf8 \uc791\uc131\ud588\uae30 \ub54c\ubb38\uc5d0 \ub9c1\ud06c\ub85c \ub300\uccb4\n",
@@ -102,16 +107,13 @@
       "5. [30\ubd84 \ub9cc\uc5d0 \ub530\ub77c\ud558\ub294 \ub3d9\uc2dc\uc131 \uc6f9\uc2a4\ud06c\ub798\ud37c](https://www.facebook.com/groups/pythonkorea/permalink/676912079058623/)\n",
       "6. [\uae08\uc735 \ub370\uc774\ud130 \uc774\ud574\uc640 \ubd84\uc11d](https://www.facebook.com/groups/pythonkorea/permalink/676916559058175/)\n",
       "7. [Lightning Talk](https://www.facebook.com/groups/pythonkorea/permalink/677260229023808/)\n",
-      "8. [\ubc30\ud3ec \uc5b4\ub5bb\uac8c \ud558\uc138\uc694? Docker\uc640 Fabric]: \ub108\ubb34 \uc870\uc6a9\ud55c \ubd84\uc704\uae30\uc5d0\uc11c \uc9c4\ud589\ub41c\ud130\ub77c \uc0ac\uc9c4\uc744 \ucc0d\uc744 \uc218\uac00 \uc5c6\uc5c8\ub2e4. \uace0\uc218\ubd84\ub4e4\uc758 \uc758\uacac \uad50\ud658. \ub9ce\uc774 \ubc30\uc6b0\ub294 \uc2dc\uac04\uc774\uc5c8\uc74c. \ucc98\uc74c\uc5d0 \ub4e3\uc9c0 \ubabb\ud558\uace0 \uc911\uac04\ubd80\ud130 \ub4e4\uc5b4\uc11c \n",
+      "8. [\ubc30\ud3ec \uc5b4\ub5bb\uac8c \ud558\uc138\uc694? Docker\uc640 Fabric]: \n",
+      "  - \ub108\ubb34 \uc870\uc6a9\ud55c \ubd84\uc704\uae30\uc5d0\uc11c \uc9c4\ud589\ub41c\ud130\ub77c \uc0ac\uc9c4\uc744 \ucc0d\uc744 \uc218\uac00 \uc5c6\uc5c8\ub2e4. \n",
+      "  - \uace0\uc218\ubd84\ub4e4\uc758 \uc758\uacac \uad50\ud658. \ub9ce\uc774 \ubc30\uc6b0\ub294 \uc2dc\uac04\uc774\uc5c8\uc74c. \ucc98\uc74c\uc5d0 \ub4e3\uc9c0 \ubabb\ud558\uace0 \uc911\uac04\ubd80\ud130 \ub4e4\uc5b4\uc11c \n",
       "  - ipython notebook\uc744 git\uc5d0 \uc5b4\ub5bb\uac8c commit \ud558\ub294\uc9c0?\n",
       "  - \ub300\uc6a9\ub7c9 \ud30c\uc77c\ub4e4\uc740 \uc5b4\ub5bb\uac8c \uc62e\uae30\ub294\uc9c0?\n",
       "  - \uc11c\ubc84\uc5d0\uc11c \ucee4\ubc0b\uc744 \ud558\ub294\uc9c0? local\uc5d0 \ub2e4\uc6b4\ubc1b\uc740 \ub2e4\uc74c\uc5d0 \ucee4\ubc0b\uc744 \ud558\ub294\uc9c0?\n",
       "  - Docker meet up\ub3c4 \uc788\ub2e4!\n",
-      "\n",
-      "#### Program \uc790\ub8cc \ubaa8\uc74c\n",
-      "\n",
-      "- [Pycon 2014 \ubc1c\ud45c\uc790\ub8cc \ubaa8\uc74c - Nave D2](https://www.facebook.com/naverd2/posts/545903455538352)\n",
-      "- [Pycon Korea 2014 Schedule](http://www.pycon.kr/2014/programs/schedule/)\n",
       "\n",
       "#### Program\ub4e4\uc758 \uacf5\ud1b5\uc810 \ubc0f \ubc29\ud5a5\uc131\n",
       "\n",
