--- a/books/python_cookbook/ch02_02.ipynb
+++ b/books/python_cookbook/ch02_02.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d313f791099e9a5306359e5900fcc3e7ba4e2df4c01f0b49e39cdc55a5e3b8b0"
+  "signature": "sha256:c82ba2424bd4b54475fb6409879bc76899bb9f65dafafd60411ac1f91b0a6ff2"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -404,7 +404,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 339
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -688,13 +688,51 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# list(c for c in range(sys.maxunicode)\n",
-      "#                          if unicodedata.combining(chr(c)))"
+      "list(c for c in range(sys.maxunicode)\n",
+      "                         if unicodedata.combining(chr(c)))[::10][:30]"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 353
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 8,
+       "text": [
+        "[768,\n",
+        " 778,\n",
+        " 788,\n",
+        " 798,\n",
+        " 808,\n",
+        " 818,\n",
+        " 828,\n",
+        " 838,\n",
+        " 849,\n",
+        " 859,\n",
+        " 869,\n",
+        " 879,\n",
+        " 1429,\n",
+        " 1439,\n",
+        " 1449,\n",
+        " 1459,\n",
+        " 1469,\n",
+        " 1555,\n",
+        " 1613,\n",
+        " 1623,\n",
+        " 1750,\n",
+        " 1762,\n",
+        " 1840,\n",
+        " 1850,\n",
+        " 1860,\n",
+        " 2030,\n",
+        " 2075,\n",
+        " 2086,\n",
+        " 2276,\n",
+        " 2286]"
+       ]
+      }
+     ],
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -1151,7 +1189,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 359
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -1165,24 +1203,81 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 360,
+       "prompt_number": 10,
        "text": [
         "460"
        ]
       }
      ],
-     "prompt_number": 360
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# digitmap"
+      "t = zip(digitmap.keys(), digitmap.values())\n",
+      "for i, v in enumerate(t):\n",
+      "    if i % 10 != 0:\n",
+      "        continue\n",
+      "    print(v)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 5
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "(70105, 57)\n",
+        "(6169, 57)\n",
+        "(55, 55)\n",
+        "(4166, 54)\n",
+        "(7254, 54)\n",
+        "(3179, 53)\n",
+        "(2411, 53)\n",
+        "(4247, 55)\n",
+        "(66725, 53)\n",
+        "(43219, 51)\n",
+        "(3305, 51)\n",
+        "(69875, 51)\n",
+        "(43267, 51)\n",
+        "(69740, 54)\n",
+        "(69951, 57)\n",
+        "(6479, 57)\n",
+        "(2413, 55)\n",
+        "(7237, 53)\n",
+        "(43476, 52)\n",
+        "(2537, 51)\n",
+        "(43606, 54)\n",
+        "(42534, 54)\n",
+        "(3668, 52)\n",
+        "(1635, 51)\n",
+        "(2669, 55)\n",
+        "(6786, 50)\n",
+        "(6800, 48)\n",
+        "(69743, 57)\n",
+        "(71366, 54)\n",
+        "(3798, 54)\n",
+        "(2795, 53)\n",
+        "(1781, 53)\n",
+        "(6616, 56)\n",
+        "(3872, 48)\n",
+        "(70096, 48)\n",
+        "(6995, 51)\n",
+        "(2918, 48)\n",
+        "(6120, 56)\n",
+        "(70097, 49)\n",
+        "(7091, 51)\n",
+        "(1985, 49)\n",
+        "(120782, 48)\n",
+        "(120792, 48)\n",
+        "(6114, 50)\n",
+        "(3052, 54)\n",
+        "(44022, 54)\n"
+       ]
+      }
+     ],
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
@@ -1432,7 +1527,23 @@
         "\n",
         "\n",
         "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "is\tawesome\r\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "\n",
@@ -4226,7 +4337,7 @@
       "\n",
       "\n",
       "- \ub9c8\uc2a4\ud130 \uc815\uaddc \ud45c\ud604\uc2dd\uc758 \ud1a0\ud070 \uc21c\uc11c\ub3c4 \uc911\uc694\n",
-      "- \ub9e4\uce6d\ud560 \ub54c re\ub294 \uba85\uc2dc\ud55c \uc21c\uc11c\ub300\ub85c \ud328\ud134\uc744 \ub9fb\uc774\ud568\n",
+      "- \ub9e4\uce6d\ud560 \ub54c re\ub294 \uba85\uc2dc\ud55c \uc21c\uc11c\ub300\ub85c \ud328\ud134\uc744 \ub9e4\uce6d\ud568\n",
       "- \ub530\ub77c\uc11c \ud55c \ud328\ud134\uc774 \ub2e4\ub978 \ud328\ud134\uc758 \ubd80\ubd84\uc774 \ub418\ub294 \uacbd\uc6b0\uac00 \uc788\ub2e4\uba74 \ud56d\uc0c1 \ub354 \uae34 \ud328\ud134\uc744 \uba3c\uc800 \ub123\uc5b4\uc57c \ud568"
      ]
     },
@@ -4268,7 +4379,7 @@
      "collapsed": false,
      "input": [
       "# \uc62c\ubc14\ub984\n",
-      "# <=, < \uc911\uc5d0\uc11c <=\uc774 \uae30\ub2c8\uae4c \uba3c\uc800\n",
+      "# <=, < \uc911\uc5d0\uc11c <=\uc774 \uba3c\uc800\n",
       "master_pat = re.compile('|'.join([LE, LT, EQ]))"
      ],
      "language": "python",
@@ -5051,12 +5162,12 @@
      "metadata": {},
      "source": [
       "- \ub514\ub809\ud1a0\ub9ac \uc774\ub984\uc5d0 \ubc14\uc774\ud2b8 \ubb38\uc790\uc5f4\uc744 \uc0ac\uc6a9\ud558\uba74 \uacb0\uacfc \ud30c\uc77c \uc774\ub984\uc774 \ub514\ucf54\ub529\ub418\uc9c0 \uc54a\uc740 \ubc14\uc774\ud2b8\ub85c \ubc18\ud658\ub428\n",
-      "- \ub514\ub809\ud1a0\ub9ac \ub9ac\uc2a4\ud2b8\uc758 \ud30c\uc77c \uc774\ub984\uc740 raw UTF-8 \uc778\ucf54\ub529\uc744 \ud3ec\ud568\ud568\n",
+      "- \ub514\ub809\ud1a0\ub9ac \ub9ac\uc2a4\ud2b8\uc758 \ud30c\uc77c \uc774\ub984\uc740 raw UTF-8 \uc778\ucf54\ub529\uc744 \ud3ec\ud568\n",
       "- \ud30c\uc77c \uc774\ub984\uacfc \uad00\ub828\ub41c \uc774\uc288\ub97c \uc54c\uc544\ubcf4\ub824\uba74 \ub808\uc2dc\ud53c 5.15 \ucc38\uace0\n",
       "\n",
       "\n",
       "- \uadf8\ub9ac\uace0 \uc131\ub2a5 \ubb38\uc81c\ub97c \uace0\ub824\ud574 \ud14d\uc2a4\ud2b8 \ubb38\uc790\uc5f4\ubcf4\ub2e4 \ubc14\uc774\ud2b8 \ubb38\uc790\uc5f4\uc744 \uc120\ud638\ud558\ub294 \ud504\ub85c\uadf8\ub798\uba38\ub4e4\uc774 \uc788\ub2e4.\n",
-      "- \ud504\ub85c\uadf8\ub7a8\uc5d0 \ud14d\uc2a4\ud2b8 \uc791\uc5c5\uc774 \ud544\uc694\ud558\ub2e4\uba74 **\ud14d\uc2a4\ud2b8 \ubb38\uc790\uc5f4**\uc744 **\uc0ac\uc6a9**\ud558\ub3c4\ub85d \ud558\uc790. \ubc14\uc774\ud2b8 \ubb38\uc790\uc5f4\uc740 \uc62c\ubc14\ub978 \uc120\ud0dd\uc774 \uc544\ub2c8\ub2e4."
+      "- \ud504\ub85c\uadf8\ub7a8\uc5d0 **\ud14d\uc2a4\ud2b8 \uc791\uc5c5\uc774 \ud544\uc694**\ud558\ub2e4\uba74 **\ud14d\uc2a4\ud2b8 \ubb38\uc790\uc5f4**\uc744 **\uc0ac\uc6a9**\ud558\ub3c4\ub85d \ud558\uc790. \ubc14\uc774\ud2b8 \ubb38\uc790\uc5f4\uc740 \uc62c\ubc14\ub978 \uc120\ud0dd\uc774 \uc544\ub2c8\ub2e4."
      ]
     }
    ],
